<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_feed_posting_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/feed_posting_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="true"
        android:background="@color/colorPrimary">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:titleTextAppearance="@style/TransparentToolbar.Title">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/toolbar_holder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|clip_vertical"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:transitionGroup="true">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_title_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLength="32"
                        android:textColor="@color/gray5"
                        android:text="@string/new_posting"
                        android:textSize="@dimen/text_size_18" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/disconnect_container_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatImageView
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/iv_disconnect_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_disconnect"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_144"
                tools:ignore="ContentDescription" />

            <androidx.appcompat.widget.AppCompatTextView
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_disconnect_home"
                android:id="@+id/tv_notice1_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="44dp"
                android:textColor="@color/grayDarkHard"
                android:text="@string/not_connected_internet"
                android:textSize="32sp" />

            <androidx.appcompat.widget.AppCompatTextView
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_notice1_home"
                android:id="@+id/tv_notice2_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:textColor="@color/grayDarkHard"
                android:text="@string/check_connection"
                android:textSize="24sp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_feed_posting_holder"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_228"
            android:elevation="0dp"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            android:gravity="top"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar_layout"
            app:cardBackgroundColor="@color/transparent"
            app:cardCornerRadius="2dp"
            app:cardElevation="3dp"
            tools:cardPreventCornerOverlap="false">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_progress_upload"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/progress_bar_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/orangeDark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_uploading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:text="@string/uploading"
                    android:textSize="@dimen/text_size_20"
                    android:textColor="@color/orangeDark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/progress_bar_upload"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/feed_posting_photo_constraintLayoutContainer"
                android:layout_width="@dimen/width_98"
                android:layout_height="@dimen/height_98"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginStart="@dimen/margin_16">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_feed_posting_photo"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_gravity="top"
                    android:gravity="top"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_cascade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginStart="@dimen/margin_92"
                android:src="@drawable/ic_file"
                android:gravity="center"
                android:scaleType="centerCrop"
                android:visibility="gone"/>

            <MultiAutoCompleteTextView
                android:id="@+id/tv_feed_posting_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="@dimen/height_192"
                android:layout_marginStart="@dimen/margin_130"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_14"
                android:inputType="textMultiLine|textAutoComplete|textAutoCorrect"
                android:hint="@string/feed_posting"
                android:layout_gravity="top|start"
                android:maxLines="4"
                android:maxLength="@integer/feed_description_length"
                android:textColor="@color/blackHard"
                android:background="@android:color/transparent"
                android:textSize="@dimen/text_size_14" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>